data/derived/fa15/progs/unify/prog0449.ml.out
Characters 83-92:
  (10*o, bigAdd(mulByDigit (o*m, l1)) l)
                           ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
